# hex-conservative

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: mutants.toml
.github/workflows/: README.md  cron-daily-fuzz.yml  fuzz.yml  rust.yaml
api/: all-features.txt  alloc-only.txt  alloc.txt  core2.txt  default-features.txt  no-default-features.txt  no-features.txt
benches/: Cargo.toml  README.md
benches/hex/: decode.rs  iter.rs
contrib/: api.sh  check-for-api-changes.sh  compile-tests.sh  crates.sh  test.sh  test_vars.sh
errors/: CHANGELOG.md  Cargo.toml
errors/src/: error.rs  lib.rs
examples/: custom.rs  hexy.rs  serde.rs  wrap_array.rs  wrap_array_display_hex_trait.rs  wrap_array_fmt_traits.rs
fuzz/: Cargo.toml  README.md  generate-files.sh
fuzz/fuzz_targets/: encode.rs  hex.rs
src/: buf_encoder.rs  display.rs  error.rs  integer.rs  iter.rs  lib.rs  parse.rs  serde.rs
tests/: api.rs
tests/compile-tests/fail/odd-capacity/: Cargo.toml
tests/compile-tests/fail/odd-capacity/src/: main.rs
tests/compile-tests/pass/even-capacity/: Cargo.toml
tests/compile-tests/pass/even-capacity/src/: main.rs
tests/compiletests/even-capacity/: Cargo.toml
tests/compiletests/odd-capacity/: Cargo.toml
