[package]
name = "hex-conservative"
version = "0.3.0"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>", "Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/hex-conservative"
documentation = "https://docs.rs/hex-conservative/"
description = "A hex encoding and decoding crate with a conservative MSRV and dependency policy."
categories = ["encoding"]
keywords = ["encoding", "hex", "hexadecimal"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["fuzz", "errors"]

[features]
default = ["std"]
std = ["alloc", "hex-conservative-errors/std"]
alloc = ["hex-conservative-errors/alloc"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
hex-conservative-errors = { version = "1.0.0-alpha.0", default-features = false }

serde = { version = "1.0", default-features = false, optional = true }


[dev-dependencies]
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "hexy"

[[example]]
name = "wrap_array"

[[example]]
name = "serde"
required-features = ["std", "serde"]

[patch.crates-io.hex-conservative-errors]
path = "errors"
