[package]
name = "hex-conservative"
version = "0.3.0"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>", "Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/hex-conservative"
documentation = "https://docs.rs/hex-conservative/"
description = "A hex encoding and decoding crate with a conservative MSRV and dependency policy."
categories = ["encoding"]
keywords = ["encoding", "hex", "hexadecimal"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
# Activates the usage of standard library, namely implementations of std::error::Error
std = ["alloc"]
# Activates the usage of standard alloc library (enables Vec<u8>)
alloc = []
# Enables detection of newer rust versions to provide additional features
# Turning it on may pull in dependencies that run build scripts and prolong compile time.
newer-rust-version = ["dep:if_rust_version"]

[dependencies]
if_rust_version = { version = "1.0.0", optional = true }
